--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -21,12 +21,18 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          {% if not user.is_authenticated %}
+              <li class="nav-item">
+          <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+        </li>
+          {% else %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'webapp:photo_create_view' %}">addPhoto</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
+          {% endif %}
       </ul>
     </div>
   </div>
