--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -27,10 +27,10 @@
         </li>
           {% else %}
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'webapp:photo_create_view' %}">addPhoto</a>
+          <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="{% url 'webapp:photo_create_view' %}">addPhoto</a>
         </li>
           {% endif %}
       </ul>
