--- a/source/webapp/templates/photos/create_view.html
+++ b/source/webapp/templates/photos/create_view.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% include 'partial/form.html' with button_text='Добавить' %}
+    <form method="post">
+    {% include 'partial/form.html' with button_text='Добавить' %}
+    </form>
 {% endblock content %}
