--- a/source/webapp/templates/photos/list_view.html
+++ b/source/webapp/templates/photos/list_view.html
@@ -2,8 +2,10 @@
 {% block content %}
 {% for photo in photos.all %}
     <a href="{% url 'webapp:photo_detail_view' photo.pk %}">
-    {{ photo.photo }}
+    {{ photo.author }}
     {{ photo.signature }}
-    </a>
+    </a>***
+    <a href="{% url 'webapp:photo_update_view' photo.pk %}">update</a> |
+    <a href="{% url 'webapp:photo_delete_view' photo.pk %}">delete</a>
     {% endfor %}
 {% endblock %}
