--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -33,6 +33,9 @@
           <a class="nav-link" href="{% url 'webapp:photo_create_view' %}">addPhoto</a>
         </li>
           {% endif %}
+      <li class="nav-item">
+          <a class="nav-link" href="{% url 'webapp:album_list_view' %}">Albums</a>
+        </li>
       </ul>
     </div>
   </div>
