--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -15,12 +15,15 @@
 <body class="container">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'webapp:photo_list_view' %}">list</a>
+    <a class="navbar-brand" href="{% url 'webapp:photo_list_view' %}">Photos</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+          <a class="nav-link" href="{% url 'webapp:album_list_view' %}">Albums</a>
+        </li>
           {% if not user.is_authenticated %}
               <li class="nav-item">
           <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
@@ -32,10 +35,10 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'webapp:photo_create_view' %}">addPhoto</a>
         </li>
-          {% endif %}
-      <li class="nav-item">
-          <a class="nav-link" href="{% url 'webapp:album_list_view' %}">Albums</a>
+              <li class="nav-item">
+          <a class="nav-link" href="{% url 'webapp:album_create_view' %}">addAlbum</a>
         </li>
+          {% endif %}
       </ul>
     </div>
   </div>
