--- a/source/webapp/templates/albums/list.html
+++ b/source/webapp/templates/albums/list.html
@@ -6,8 +6,8 @@
     {{ album.name }}
     {{ album.description }}
     </a>***
+    <a href="{% url 'webapp:album_update_view' album.pk %}">update</a> |
+    <a href="{% url 'webapp:album_delete_view' album.pk %}">delete</a>
     </p>
-{#    <a href="{% url 'webapp:photo_update_view' photo.pk %}">update</a> |#}
-{#    <a href="{% url 'webapp:photo_delete_view' photo.pk %}">delete</a>#}
     {% endfor %}
 {% endblock %}
