--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -21,9 +21,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item">
-          <a class="nav-link" href="{% url 'webapp:album_list_view' %}">Albums</a>
-        </li>
+{#      <li class="nav-item">#}
+{#          <a class="nav-link" href="{% url 'webapp:album_list_view' %}">Albums</a>#}
+{#        </li>#}
           {% if not user.is_authenticated %}
               <li class="nav-item">
           <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
@@ -37,6 +37,9 @@
         </li>
               <li class="nav-item">
           <a class="nav-link" href="{% url 'webapp:album_create_view' %}">addAlbum</a>
+        </li>
+        <li class="nav-item">
+            <p class="nav-link">Привет, {{ user.username }}</p>
         </li>
           {% endif %}
       </ul>
