--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -39,7 +39,7 @@
           <a class="nav-link" href="{% url 'webapp:album_create_view' %}">addAlbum</a>
         </li>
         <li class="nav-item">
-            <p class="nav-link">Привет, {{ user.username }}</p>
+            <p class="nav-link">Привет, <a href="{% url 'accounts:profile' user.pk %}">{{ user.username }}</a></p>
         </li>
           {% endif %}
       </ul>
