add photo choose done

--- a/source/webapp/templates/albums/list.html
+++ b/source/webapp/templates/albums/list.html
@@ -8,6 +8,7 @@
     </a>***
     <a href="{% url 'webapp:album_update_view' album.pk %}">update</a> |
     <a href="{% url 'webapp:album_delete_view' album.pk %}">delete</a>
+{#    <button></button>#}
     </p>
     {% endfor %}
 {% endblock %}
