--- a/source/webapp/templates/partial/photo_list.html
+++ b/source/webapp/templates/partial/photo_list.html
@@ -12,3 +12,27 @@
     <a href="{% url 'webapp:photo_update_view' photo.pk %}">update</a> |
     <a href="{% url 'webapp:photo_delete_view' photo.pk %}">delete</a>
     </p>
+{% if user.is_authenticated %}
+    {% if user not in photo.choose.all %}
+    <button onclick="photoChooseClick(event)"
+            id = "{{ photo.pk }}choose_btn"
+            data-choose-url = {% url 'webapp:photo_add_choose' photo.pk %}
+    >Избранные</button>
+        <button onclick="photoChooseClick(event)"
+            id = "{{ photo.pk }}choose_btn"
+
+            data-choose-url = {% url 'webapp:photo_remove_choose' photo.pk %}
+    >ОтменитьИзбрание</button>
+        {% else %}
+        <button onclick="photoChooseClick(event)"
+            id = "{{ photo.pk }}choose_btn"
+            data-choose-url = {% url 'webapp:photo_add_choose' photo.pk %}
+    >Избранные</button>
+        <button onclick="photoChooseClick(event)"
+            id = "{{ photo.pk }}choose_btn"
+            data-choose-url = {% url 'webapp:photo_remove_choose' photo.pk %}
+    >ОтменитьИзбрание</button>
+        {% endif %}
+
+{% endif %}
+<div id="{{ photo.pk }}choose"></div>
